# smart-task-dashboard

./: Dockerfile  pyproject.toml
api/: dashboard_api.py  server.py
smart_task_dashboard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
